add good watcher

--- a/.docit/package.json
+++ b/.docit/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "license": "MIT",
   "author": {
-    "name":   "LegoMushroom",
-    "email":  "legomushroom@gmail.com",
-    "url":    "http://legomushroom.com"
+    "name": "LegoMushroom",
+    "email": "legomushroom@gmail.com",
+    "url": "http://legomushroom.com"
   },
   "repository": {
     "type": "git",
@@ -19,26 +19,29 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "jade": "1.8.1"
+    "gaze": "^0.6.4",
+    "jade": "1.8.1",
+    "watch": "^0.13.0",
+    "watchr": "^2.4.11"
   },
   "devDependencies": {
-    "nodemon": "*",
+    "bower": "latest",
     "gulp": "~3.8.10",
-    "gulp-minify-css": "~0.3.0",
-    "gulp-stylus": "0.0.12",
     "gulp-autoprefixer": "0.0.6",
-    "gulp-notify": "~0.5.1",
-    "gulp-livereload": "~1.2.0",
-    "gulp-coffee": "~1.4.1",
     "gulp-changed": "~0.2.0",
-    "gulp-jade": "~0.4.2",
-    "gulp-watch": "*",
+    "gulp-coffee": "~1.4.1",
     "gulp-coffeelint": "*",
-    "gulp-plumber": "*",
-    "gulp-debug": "*",
-    "gulp-karma": "*",
     "gulp-concat": "*",
     "gulp-csslint": "*",
-    "bower": "latest"
+    "gulp-debug": "*",
+    "gulp-jade": "~0.4.2",
+    "gulp-karma": "*",
+    "gulp-livereload": "~1.2.0",
+    "gulp-minify-css": "~0.3.0",
+    "gulp-notify": "~0.5.1",
+    "gulp-plumber": "*",
+    "gulp-stylus": "0.0.12",
+    "gulp-watch": "*",
+    "nodemon": "*"
   }
 }
