add map generation

--- a/.docit/package.json
+++ b/.docit/package.json
@@ -22,6 +22,7 @@
     "concat": "^1.0.0",
     "gaze": "^0.6.4",
     "jade": "1.8.1",
+    "jsonfile": "^2.0.0",
     "watch": "^0.13.0",
     "watchr": "^2.4.11"
   },
