--- a/.docit/package.json
+++ b/.docit/package.json
@@ -23,6 +23,7 @@
     "gaze": "^0.6.4",
     "jade": "1.8.1",
     "jsonfile": "^2.0.0",
+    "livereload": "^0.3.4",
     "watch": "^0.13.0",
     "watchr": "^2.4.11"
   },
