--- a/.docit/package.json
+++ b/.docit/package.json
@@ -47,6 +47,11 @@
     "gulp-shell": "^0.2.11",
     "gulp-stylus": "0.0.12",
     "gulp-watch": "*",
-    "nodemon": "*"
+    "jasmine-node": "^1.14.5",
+    "nodemon": "*",
+    "pm2": "^0.12.1",
+    "ps-node": "0.0.3",
+    "shell": "^0.3.2",
+    "shelljs": "^0.3.0"
   }
 }
