add clean project utility

--- a/.docit/package.json
+++ b/.docit/package.json
@@ -51,6 +51,7 @@
     "nodemon": "*",
     "pm2": "^0.12.1",
     "ps-node": "0.0.3",
+    "rimraf": "^2.2.8",
     "shell": "^0.3.2",
     "shelljs": "^0.3.0"
   }
