--- a/.docit/package.json
+++ b/.docit/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "concat": "^1.0.0",
+    "fs-extra": "^0.13.0",
     "gaze": "^0.6.4",
     "jade": "1.8.1",
     "jsonfile": "^2.0.0",
@@ -48,6 +49,7 @@
     "gulp-stylus": "0.0.12",
     "gulp-watch": "*",
     "jasmine-node": "^1.14.5",
+    "mkdirp": "^0.5.0",
     "nodemon": "*",
     "pm2": "^0.12.1",
     "ps-node": "0.0.3",
