--- a/.docit/package.json
+++ b/.docit/package.json
@@ -48,7 +48,7 @@
     "gulp-shell": "^0.2.11",
     "gulp-stylus": "0.0.12",
     "gulp-watch": "*",
-    "jasmine-node": "^1.14.5",
+    "jasmine-node": "2.0.0-beta4",
     "mkdirp": "^0.5.0",
     "nodemon": "*",
     "pm2": "^0.12.1",
