--- a/.docit/package.json
+++ b/.docit/package.json
@@ -25,6 +25,8 @@
     "jade": "1.8.1",
     "jsonfile": "^2.0.0",
     "livereload": "^0.3.4",
+    "readdir-recursive": "0.0.4",
+    "recursive-readdir": "^1.2.0",
     "watch": "^0.13.0",
     "watchr": "^2.4.11"
   },
@@ -48,9 +50,9 @@
     "gulp-shell": "^0.2.11",
     "gulp-stylus": "0.0.12",
     "gulp-watch": "*",
-    "jasmine-node": "^1.14.5",
+    "jasmine-node": "2.0.0-beta4",
     "mkdirp": "^0.5.0",
-    "nodemon": "*",
+    "nodemon": "^1.2.1",
     "pm2": "^0.12.1",
     "ps-node": "0.0.3",
     "rimraf": "^2.2.8",
